[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Codes/BigSpidaHand.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Woosh.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sprites/Misc/LargeShadow.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/Muffled Impact.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/Misc/BigSpidaHand.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 4 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 36, 208 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 512, 320 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1084 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.675 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:ENABLED")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DamageArea:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 32 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DamageArea/Collision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DamageArea/Collision:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -768 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Impact:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "Smashing"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1084 ), Vector2( 0, -1084 ), Vector2( 0, -250 ), Vector2( 0, -250 ), Vector2( 0, -1084 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.675 ), Vector2( 1, 0.675 ), Vector2( 4, 1.6 ), Vector2( 4, 1.6 ), Vector2( 1, 0.675 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:ENABLED")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DamageArea/Collision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DamageArea/Collision:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -768 ), Vector2( 0, -768 ), Vector2( 0, -208 ), Vector2( 0, -208 ), Vector2( 0, -768 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_shake"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Impact:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Woosh:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="BigSpidaHand" type="KinematicBody2D" groups=["BigFist"]]
collision_layer = 4
script = ExtResource( 2 )
SPEED = 200

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 32 )
scale = Vector2( 1, 0.675 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2.38419e-07 )
scale = Vector2( 1, 0.675 )
texture = ExtResource( 6 )
offset = Vector2( 0, -1084 )
flip_h = true
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 13 )
disabled = true

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2( 0, 32 )

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, -768 )
shape = SubResource( 14 )
disabled = true

[node name="PlayerFinder" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="PlayerFinder"]
shape = SubResource( 17 )

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "Smashing"
anims/RESET = SubResource( 16 )
anims/Smashing = SubResource( 15 )

[node name="Woosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.8
bus = "SFX"

[node name="Impact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
pitch_scale = 1.5
bus = "SFX"

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_entered" from="PlayerFinder" to="." method="_on_PlayerFinder_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
